Use module-path in docker image for org.eclipse.persistence.moxy dependencies